[workspace]
resolver = "2"
members = ["clients/cli", "program", "program/tests/programs/test-transfer-hook"]

[workspace.metadata.cli]
solana = "2.2.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2024-11-22"
lint = "nightly-2024-11-22"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-wrap"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["derive"] }
clap = { version = "3.2.25", features = ["derive"] }
mollusk-svm = "0.3.0"
mollusk-svm-programs-token = "0.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.14.0"
serial_test = "3.2.0"
solana-account = "2.2.1"
solana-account-info = "2.3.0"
solana-clap-v3-utils = "2.3.1"
solana-cli-config = "2.3.1"
solana-cli-output = "2.3.1"
solana-client = "2.3.1"
solana-commitment-config = "2.2.1"
solana-cpi = "2.2.1"
solana-logger = "2.3.1"
solana-hash = "2.3.0"
solana-instruction = "2.3.0"
solana-keypair = "2.2.1"
solana-msg = "2.2.1"
solana-presigner = "2.2.1"
solana-program-entrypoint = "2.3.0"
solana-program-error = "2.2.2"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = "2.4.0"
solana-remote-wallet = "2.3.1"
solana-rent = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-sysvar = "2.2.2"
solana-test-validator = "2.3.1"
solana-transaction = "2.2.2"
spl-associated-token-account-client = "2.0.0"
spl-pod = "0.5.1"
spl-tlv-account-resolution = "0.10.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-wrap = { path = "program", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10.0"
tempfile = "3.20.0"
test-case = "3.3.1"
test-transfer-hook = { path = "program/tests/programs/test-transfer-hook", features = ["no-entrypoint"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
