[workspace]
resolver = "2"
members = [
    "clients/cli",
    "program",
    "program/test-metadata-owner",
    "program/test-transfer-hook",
]

[workspace.metadata.cli]
solana = "3.1.8"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2026-01-22"
lint = "nightly-2026-01-22"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-wrap"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.102"
borsh = "1"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "3.2.25", features = ["derive"] }
libtest-mimic = "0.8.2"
mollusk-svm = "0.11.0"
mollusk-svm-programs-token = "0.11.0"
mpl-token-metadata = "5.1.2-alpha.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_json = "1.0.149"
serde_with = "3.18.0"
serial_test = "3.4.0"
solana-account = "3.4.0"
solana-account-info = "3.1.1"
solana-clap-v3-utils = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-cli-config = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-cli-output = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-client = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-commitment-config = "3.1.1"
solana-cpi = "3.1.0"
solana-hash = "4.3.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-msg = "3.1.0"
solana-presigner = "3.0.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-pubkey = "4.2.0"
solana-remote-wallet = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-rent = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sysvar = "3.0.0"
solana-test-validator = { version = "3.1.11", features = ["agave-unstable-api"] }
solana-transaction = "3.0.0"
solana-zk-sdk = "6.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-pod = "0.7.3"
spl-tlv-account-resolution = "0.11.1"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.8.0"
spl-token-wrap = { version = "1.0.0", path = "program", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "2.1.0"
spl-type-length-value = "0.9.1"
tempfile = "3.27.0"
test-case = "3.3.1"
test-metadata-owner = { path = "program/test-metadata-owner", features = ["no-entrypoint"] }
test-transfer-hook = { path = "program/test-transfer-hook", features = ["no-entrypoint"] }
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["full"] }
