[package]
name = "spl-token-wrap"
version = "0.1.0"
description = "Solana Program Library Token Wrap"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-program/token-wrap"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-account-info = "2.2.1"
solana-decode-error = "2.2.1"
solana-cpi = "2.2.1"
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-sysvar = "2.2.1"
spl-pod = "0.5.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9.0"
thiserror = "2.0.12"

# Should depend on the next crate version after 7.0.0 when https://github.com/solana-program/token-2022/pull/253 is deployed
spl-token-2022 = { git = "https://github.com/solana-program/token-2022", rev = "00e0f4723c2606c0facbb4921e1b2e2e030d1fa6", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk-svm = "0.1.3"
mollusk-svm-programs-token = "0.1.3"
spl-tlv-account-resolution = "0.10.0"
solana-account = "2.2.1"
solana-sdk-ids = "2.2.1"
test-transfer-hook = { path = "tests/programs/test-transfer-hook", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
