[package]
name = "spl-token-wrap"
version = "0.1.0"
description = "Solana Program Library Token Wrap"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { workspace = true }
mpl-token-metadata = { workspace = true, features = ["serde"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
spl-associated-token-account-client = { workspace = true }
spl-pod = { workspace = true }
spl-token = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-type-length-value = { workspace = true }
thiserror = { workspace = true }

# Should depend on the next crate version after 7.0.0 when https://github.com/solana-program/token-2022/pull/253 is deployed
spl-token-2022 = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
mock-metadata-owner = { workspace = true }
mollusk-svm = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
solana-account = { workspace = true }
solana-zk-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
test-case = { workspace = true }
test-transfer-hook = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
