[package]
name = "spl-token-wrap-cli"
version = "1.0.0"
description = "Solana Program Library Token Wrap command-line utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-wrap"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full"] } # Needed for async main
clap = { version = "3.2.23", features = ["derive"] }
solana-clap-v3-utils = "2.2.2"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
solana-remote-wallet = "2.2.0"
solana-cli-config = "2.2.0"
solana-cli-output = "2.2.0"
spl-token-wrap = { path = "../../program", features = ["no-entrypoint"] }
solana-logger = "2.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_with = "3.12"
bincode = "1.3.1"
borsh = "1.5.5"
spl-token-client = { version = "0.14.0" }
bytemuck = { version = "1.22.0", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-account-info = "2.2.1"
solana-decode-error = "2.2.1"
solana-cpi = "2.2.1"
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-sysvar = "2.2.1"
spl-pod = "0.5.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]


[[bin]]
name = "spl-token-wrap"
path = "src/main.rs"
