[package]
name = "spl-token-wrap-cli"
version = "1.0.0"
description = "Solana Program Library Token Wrap command-line utility"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_with = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-logger = { workspace = true }
solana-presigner = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
spl-associated-token-account-client = { workspace = true }
spl-token = { workspace = true }
spl-token-wrap = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
solana-keypair = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-test-validator = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "spl-token-wrap"
path = "src/main.rs"
