[package]
name = "test-transfer-hook"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
solana-account-info = "2.1.13"
solana-program-entrypoint = "2.1.13"
solana-program-error = "2.1.13"
solana-pubkey = "2.1.13"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
