[package]
name = "test-transfer-hook"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-account-info = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
